# archive_rdase

./: README.md
rdase/: CMakeLists.txt  package.xml
urdf_example1/: CMakeLists.txt  README.md  package.xml
urdf_example1/description/meshes/: fusca.stl  lms200.dae  monster_wheel.stl
urdf_example1/description/urdf/: robot1.xacro  robot2.xacro  robot3.xacro  robot4.xacro
urdf_example1/description/urdf/macros/: base.xacro  driving_plugin.xacro  gazebo_top_level_plugins.xacro  imu.xacro  laser_scanners.xacro  materials.xacro  wheel.xacro
urdf_example1/launch/: gazebo_sim.launch  model_display.launch
urdf_example1/rviz/: model_display.rviz
urdf_example2/: CMakeLists.txt  README.md  package.xml
urdf_example2/config/: differential_drive.yaml
urdf_example2/description/urdf/: robot1.xacro
urdf_example2/description/urdf/macros/: base.xacro  wheel.xacro
urdf_example2/launch/: gazebo_sim.launch  model_display.launch
urdf_example2/rviz/: gazebo_sim.rviz  model_display.rviz
